--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -2,9 +2,13 @@
  {% block body %}
      <div class="container">
          <div class="row mt-5">
-             <div class="col-sm-8 offset-sm-2">
-                 <h1>Première page web avec Symfony</h1>
-                 <p>Hello World !!!</p>
+             <div class="col-10 mx-auto">
+                 <h1>Nombre d'artistes trouvés : {{ artistes | length }}</h1>
+                 {% for artiste in artistes %}
+                 <span class="d-block">
+                     {{ artiste.getArtistName() |upper }} - <b class="btn-primary p-1">{{ artiste.discs | length }}</b> disques
+                 </span>
+                 {% endfor %}
              </div>
          </div>
      </div>
