--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,9 @@
         <li class="nav-item">
             <a class="nav-link" href="{{ path('app_contact')}}">contact</a>
         </li>
+        <li>
+            <a class="nav-link" href="{{ path('app_testaffi')}}">testaffi</a>
+        </li>
     </ul>
 </div>
 </nav>
