--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -4,7 +4,8 @@
 
 <div>
 
-    {{ form(form) }} 
+ {{ form_start(form, {attr: {'novalidate': 'novalidate'}}) }}
+ {{ form_end(form) }}
 
 </div>
 {% endblock %}
