--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -9,11 +9,16 @@
                     <thead>
                     <tr>
                         <th>Email</th>
+                        <th colspan="2">Rôles</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
                         <td>{{ informations.email }}</td>
+{#                        Les rôles sont un tableau, il nous faire une boucle :#}
+                        {% for role in informations.roles %}
+                          <td>{{ role }}</td>
+                        {% endfor %}
                     </tr>
                     </tbody>
                 </table>
